fixing expanded menu translation cutoff issue

--- a/src/css/trilogy/namespaced/shell/_expanded-menu.scss
+++ b/src/css/trilogy/namespaced/shell/_expanded-menu.scss
@@ -33,7 +33,7 @@ cagov-navoverlay {
         max-width: 90%;
         position: absolute;
         left: 50%;
-        top: 50%;
+        top: 65%;
         transform: translateX(-50%) translateY(-50%);
         display: flex;
         flex-wrap: wrap;
